<resources>
    <string name="app_name">SeoulGuide</string>
    <string name="menuHome">홈</string>
    <string name="menuTag">태그별 보기</string>
    <string name="menuPrefer">사용자 성향</string>
    <string name="menuBucket">버킷리스트</string>
    <string name="menuPlanner">여행 플래너</string>
    <string name="menuMap">지도</string>
    <string name="menuSetting">설정</string>
    <string name="drawerOpen">Drawer Open</string>
    <string name="drawerClose">Drawer Close</string>
    <string name="searchView">검색</string>
    <string name="detail_review_writer_hint">작성자</string>
    <string name="detail_review_info_hint">내용</string>
    <string name="detail_create_review">리뷰 남기기</string>
    <string name="detail_review_ok">확인</string>
    <string name="tag_result_nothing">태그에 맞는 여행지가 없습니다.</string>
    <string name="preferDataNothing">저장된 데이터가 없습니다.</string>
    <string name="preferGoTest">내 성향 알아보기</string>
    <string name="preferNextTest">다음 페이지</string>
    <string name="preferDeleteData">결과 지우기</string>
    <string name="preferGoToSightList">여행지 보러 가기</string>
    <string name="bucketEmptyList">버킷리스트가 비어있습니다.</string>

</resources>
