<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:title="@string/menuHome"
            android:icon="@drawable/menu_home"
            android:checkable="true"
            android:checked="true"/>
        <item
            android:id="@+id/menuTag"
            android:title="@string/menuTag"
            android:icon="@drawable/menu_tag"
            android:checkable="true"/>
        <item
            android:id="@+id/menuPrefer"
            android:title="@string/menuPrefer"
            android:icon="@drawable/menu_prefer"
            android:checkable="true"/>
        <item
            android:id="@+id/menuBucket"
            android:title="@string/menuBucket"
            android:icon="@drawable/menu_bucket"
            android:checkable="true"/>
        <item
            android:id="@+id/menuPlanner"
            android:title="@string/menuPlanner"
            android:icon="@drawable/menu_planner"
            android:checkable="true"/>
        <item
            android:id="@+id/menuMap"
            android:title="@string/menuMap"
            android:icon="@drawable/menu_map"
            android:checkable="true"/>
        <item
            android:id="@+id/menuSetting"
            android:title="@string/menuSetting"
            android:icon="@drawable/menu_setting"
            android:checkable="true"/>
    </group>
</menu>